// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CancelIcon matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "charSet": "utf-8",
      "className": "hover-pointer",
      "dangerouslySetInnerHTML": Object {
        "__html": "❌",
      },
      "style": Object {
        "color": "#888",
        "fontSize": "18pt",
        "position": "absolute",
        "right": 5,
        "top": 5,
      },
    },
    "ref": null,
    "rendered": null,
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "charSet": "utf-8",
        "className": "hover-pointer",
        "dangerouslySetInnerHTML": Object {
          "__html": "❌",
        },
        "style": Object {
          "color": "#888",
          "fontSize": "18pt",
          "position": "absolute",
          "right": 5,
          "top": 5,
        },
      },
      "ref": null,
      "rendered": null,
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SearchIcon matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "charSet": "utf-8",
      "dangerouslySetInnerHTML": Object {
        "__html": "⚲",
      },
      "style": Object {
        "color": "#888",
        "fontSize": "20pt",
        "left": "6pt",
        "position": "absolute",
        "top": "3pt",
        "transform": "rotate(-45deg)",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "charSet": "utf-8",
        "dangerouslySetInnerHTML": Object {
          "__html": "⚲",
        },
        "style": Object {
          "color": "#888",
          "fontSize": "20pt",
          "left": "6pt",
          "position": "absolute",
          "top": "3pt",
          "transform": "rotate(-45deg)",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
